--- a/ropas.html
+++ b/ropas.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>KitKan Shop - Tienda Virtual ::: Ropas</title>
+        <title>KitKan Shop - Tienda Virtual</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/logo.ico" />
         <!-- Bootstrap icons-->
@@ -20,17 +20,17 @@
                 <img src="./img/logo.jpg" alt="logo" width="80" height="50">
             </a>
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="./index.html">Kitkan Shop</a>
+                <a class="navbar-brand text-white" href="./index.html">Kitkan Shop</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="./index.html">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./ropas.html">Ropas</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./calzados.html">Calzado</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./accesorio.html">Accesorio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link active text-white" aria-current="page" href="./index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="./ropas.html">Ropas</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="./calzados.html">Calzado</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="./accesorio.html">Accesorio</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="./contacto.html">Contacto</a></li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
+                            <a class="nav-link dropdown-toggle text-white" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="#!">Todos los productos</a></li>
                                 <li><hr class="dropdown-divider" /></li>
@@ -40,8 +40,8 @@
                         </li>
                     </ul>
                     <form class="d-flex">
-                        <button class="btn btn-outline-dark" type="submit">
-                            <i class="bi-cart-fill me-1"></i>
+                        <button class="btn btn-outline-light text-white" type="submit">
+                            <i class="bi-cart-fill me-1 text-white"></i>
                             Carro
                             <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
                         </button>
@@ -66,10 +66,10 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Limpiar</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Ordenar</a></li>                        
+                        <li class="nav-item"><a class="nav-link active text-white" aria-current="page" href="#!">Limpiar</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="#!">Ordenar</a></li>                        
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Filtro</a>
+                            <a class="nav-link dropdown-toggle text-white" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Filtro</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="#!">Todos los productos</a></li>
                                 <li><hr class="dropdown-divider" /></li>
