--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <li class="nav-item"><a class="nav-link text-white" href="./ropas.html">Ropas</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="./calzados.html">Calzado</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="./accesorio.html">Accesorio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="./contacto.html">Contacto</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-white" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
