--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <body>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light col-orange">
-            <a href="./index.html" class="i-logo" target="_blank">
-                <img src="./img/logo.jpg" alt="logo" class="navbar-brand container px-4 px-lg-5" width="80" height="50">
+            <a href="./index.html" class="i-logo container px-4 px-lg-5" target="_blank">
+                <img src="./img/logo.jpg" alt="logo" class="navbar-brand" width="80" height="50">
             </a>
             <div class="container px-4 px-lg-5">
                 <a class="navbar-brand text-white" href="./index.html">Kitkan Shop</a>
