Agregado de estio y color

--- a/contacto.html
+++ b/contacto.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light col-orange">
+        <nav class="navbar navbar-expand-lg navbar-light col-oranred">
             <a href="./index.html" class="i-logo" target="_blank">
                 <img src="./img/logo.jpg" alt="logo" width="80" height="50">
             </a>
@@ -60,7 +60,7 @@
         </header>
 
         <!-- Section-->
-        <section class="py-5 col-orange posit-ar">
+        <section class="py-5 col-oranred posit-ar">
             <h4>Escríbenos tu comentario para seguir mejorando:</h4>
         <p><em>Recuerda tambien escribirnos en nuestras redes sociales</em></p>
 
