--- a/calzados.html
+++ b/calzados.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light col-orange">
+        <nav class="navbar navbar-expand-lg navbar-light col-oranred">
             <a href="./index.html" class="i-logo" target="_blank">
                 <img src="./img/logo.jpg" alt="logo" width="80" height="50">
             </a>
@@ -83,7 +83,7 @@
         </nav><!--Fin de Navigation parte 2-->       
 
         <!-- Section-->
-        <section class="py-5 col-orange">
+        <section class="py-5 col-oranred">
             <div class="container px-4 px-lg-5 mt-5">
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                     <div class="col mb-5">
