--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         <!-- Header-->
         <header class="bg-tienda py-5">
             <div class="container px-4 px-lg-5 my-5">
-                <div class="text-center text-dark">
+                <div class="text-center text-white">
                     <h1 class="display-4 fw-bolder">KitKan: Ubica la moda aquí</h1>
-                    <p class="lead fw-normal text-dark-50 mb-0">Nos diferenciamos por nuestra calidad y servicio</p>
+                    <p class="lead fw-normal text-white-50 mb-0">Nos diferenciamos por nuestra calidad y servicio</p>
                 </div>
             </div>
         </header>
