--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
         </header>
         <!-- Section-->
-        <section class="py-5 col-oranred">
+        <section class="py-5 col-redoran">
             <div class="container px-4 px-lg-5 mt-5">
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                     <div class="col mb-5">
