--- a/contacto.html
+++ b/contacto.html
@@ -77,7 +77,7 @@
         </section>
 
         
-        <h3 class="bg-dark text-white">Contactanos en:</h3>
+        <h3 class="text-white gr-hor">Contactanos en:</h3>
         <div class="container br-da text-white">
             <h3>Redes sociales</h3>
             <p>Consultados en nuestras redes sociales sobre nuestros productos</p>
