--- a/calzados.html
+++ b/calzados.html
@@ -41,8 +41,8 @@
                     </ul>
                     <form class="d-flex">
                         <button class="btn btn-outline-light text-white" type="submit">
-                            <i class="bi-cart-fill me-1 text-white"></i>
-                            Carro
+                            <i class="bi-cart-fill me-1 color-tex">Carro</i>
+                            
                             <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
                         </button>
                     </form>
