--- a/contacto.html
+++ b/contacto.html
@@ -12,6 +12,10 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <link href="css/styles_.css" rel="stylesheet"/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
     </head>
     <body>
         <!-- Navigation-->
@@ -74,13 +78,16 @@
         <label form="comentario">Deja tus comentarios</label><br>
         <textarea name="comentario" id="comentario" cols="90" rows="10" class="form-label"></textarea>
         <br><br>
+        <input type="button" value="Guardar">
+        <input type="button" value="Limpiar">
+        <br><br>
         </section>
 
         
         <h3 class="text-white gr-hor">Contactanos en:</h3>
         <div class="container br-da text-white">
-            <h3>Redes sociales</h3>
-            <p>Consultados en nuestras redes sociales sobre nuestros productos</p>
+            <h3>Nuestras redes sociales</h3>
+            <p class="tip">Consultados en nuestras redes sociales sobre nuestros productos</p>
             <a href="www.facebook.com" class="text-primary">
                 <img src="./img/facebook.png" class="br-da" alt="face" width="40" height="40">Facebook
             </a>
