Color, estilo, letras y tamaños cambiados

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <!--Descripción-->
+        <meta name="description" content="Tienda virtual Kitkan Shop donde encontraras la mejor calidad y descuentos en ropas, zapatillas o accesorios" />
+        <meta name="author" content="Mario A. Huamaní Príncipe" />
         <title>KitKan Shop - Tienda Virtual</title>
+        <!--SEO-->
+        <meta name="keywords" content="tienda, online, ropa, accesorios, zapatillas, kitkan, shop, virtual">
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/logo.ico" />
         <!-- Bootstrap icons-->
@@ -15,11 +18,11 @@
     </head>
     <body>
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light col-oranred">
-            <a href="./index.html" class="i-logo" target="_blank">
-                <img src="./img/logo.jpg" alt="logo" class="navbar-brand bor-das" width="80" height="50">
-            </a>
-            <div class="container px-4 px-lg-5">
+        <nav class="navbar navbar-expand-lg navbar-light col-oranred">            
+            <div class="container px-0 px-lg-0">
+                <a href="./index.html" class="" target="_blank">
+                    <img src="./img/logo.jpg" alt="logo" class="navbar-brand bor-das">
+                </a>
                 <a class="navbar-brand text-white" href="./index.html">Kitkan Shop</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -40,7 +43,7 @@
                         </li>
                     </ul>
                     <form class="d-flex">
-                        <button class="btn btn-outline-light text-white" type="submit">
+                        <button class="btn btn-outline-secondary text-white" type="submit">
                             <i class="bi-cart-fill me-1 color-tex">Carro</i>
                             
                             <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
