--- a/ropas.html
+++ b/ropas.html
@@ -16,10 +16,10 @@
     <body>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light col-oranred">
-            <a href="./index.html" class="i-logo" target="_blank">
-                <img src="./img/logo.jpg" alt="logo" class="navbar-brand bor-das" width="80" height="50">
-            </a>
-            <div class="container px-4 px-lg-5">
+            <div class="container px-0 px-lg-0">
+                <a href="./index.html" class="" target="_blank">
+                    <img src="./img/logo.jpg" alt="logo" class="navbar-brand bor-das" width="80" height="50">
+                </a>
                 <a class="navbar-brand text-white" href="./index.html">Kitkan Shop</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -40,7 +40,7 @@
                         </li>
                     </ul>
                     <form class="d-flex">
-                        <button class="btn btn-outline-light text-white" type="submit">
+                        <button class="btn btn-outline-secondary text-white" type="submit">
                             <i class="bi-cart-fill me-1 color-tex">Carro</i>
                             
                             <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
