--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link active text-white aria-current="page" href="./index.html">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="./ropas.html">Ropas</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="./calzados.html">Calzado</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="./accesorio.html">Accesorio</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="./ropas.html">Vestimentas</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="./calzados.html">Calzados</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="./accesorio.html">Accesorios</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="./contacto.html">Contacto</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-white" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
