--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active text-white aria-current="page" href="./index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link active text-white" aria-current="page" href="./index.html">Inicio</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="./ropas.html">Vestimentas</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="./calzados.html">Calzados</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="./accesorio.html">Accesorios</a></li>
